// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute-template-query should execute a simple template query 1`] = `
{
  "content": [],
  "structuredContent": {
    "executionTime": 0,
    "queryExpression": "Umbraco.ContentAtRoot().FirstOrDefault()
    .Children()
    .Where(x => x.IsVisible())
    .Take(10)",
    "resultCount": 6,
    "sampleResults": [
      {
        "icon": "icon-document color-blue",
        "name": "Features",
      },
      {
        "icon": "icon-document color-blue",
        "name": "About",
      },
      {
        "icon": "icon-thumbnail-list color-blue",
        "name": "Blog",
      },
      {
        "icon": "icon-message color-blue",
        "name": "Contact",
      },
      {
        "icon": "icon-search color-blue",
        "name": "Search",
      },
      {
        "icon": "icon-users color-blue",
        "name": "Authors",
      },
    ],
  },
}
`;

exports[`execute-template-query should execute a template query with document type filter 1`] = `
{
  "content": [],
  "structuredContent": {
    "executionTime": 0,
    "queryExpression": "Umbraco.ContentAtRoot().FirstOrDefault()
    .ChildrenOfType("contentPage")
    .Where(x => x.IsVisible())
    .Take(5)",
    "resultCount": 0,
    "sampleResults": [],
  },
}
`;

exports[`execute-template-query should execute a template query with filters and sorting 1`] = `
{
  "content": [],
  "structuredContent": {
    "executionTime": 0,
    "queryExpression": "Umbraco.ContentAtRoot().FirstOrDefault()
    .Children()
    .Where(x => x.IsVisible())
    .OrderByDescending(x => x.createDate)
    .Take(10)",
    "resultCount": 6,
    "sampleResults": [
      {
        "icon": "icon-search color-blue",
        "name": "Search",
      },
      {
        "icon": "icon-document color-blue",
        "name": "Features",
      },
      {
        "icon": "icon-message color-blue",
        "name": "Contact",
      },
      {
        "icon": "icon-thumbnail-list color-blue",
        "name": "Blog",
      },
      {
        "icon": "icon-users color-blue",
        "name": "Authors",
      },
      {
        "icon": "icon-document color-blue",
        "name": "About",
      },
    ],
  },
}
`;

exports[`execute-template-query should handle invalid query gracefully 1`] = `
{
  "content": [],
  "structuredContent": {
    "executionTime": 0,
    "queryExpression": "Umbraco.ContentAtRoot().FirstOrDefault()
    .ChildrenOfType("nonExistentType")
    .Where(x => x.IsVisible())
    .Take(10)",
    "resultCount": 0,
    "sampleResults": [],
  },
}
`;
